[package]
name = "session"
version = "0.1.0"
authors = ["tahar.bounsiar <tahar.bounsiar@engie.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cookie-session"]
cookie-session = ["actix-web/secure-cookies"]

[dependencies]
actix-web = { version = "3.0", default_features = false }
actix-service = "1.0"

futures-util = { version = "0.3", default-features = false }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_millis = "0.1"

time = { version = "0.2.7", default-features = false, features = ["std"] }

derive_more = "0.99"

rand = "0.8"

lazy_static = "1.4"
